framec_tests/language_specific/typescript/v3_facade_smoke/negative/wrapper_missing_semicolon.frm
@target typescript

system S {
    machine:
        $A {
            e() {
                __frame_forward()
            }
        }
}

